Fixing Spacing with Pts and Family

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -831,8 +831,8 @@ form.request-form {
   min-width: inherit;
 }
 
-.my-2 {
-  margin: 4.5em 0px !important;
+.mt-3 {
+  margin-top: 4.5em !important;
 }
 
 .media-body li {
